syntax = "proto3";

option java_package = "ChargingSpotsService";
option java_multiple_files = true;
option java_outer_classname = "ChargingSpotsServiceImpl";

service ChargingSpotsService {
	// rpc stands for remote procedure call


	rpc TrackLocation(stream coordinates) returns (chargingSpots ){}


	rpc CheckPrices(chargingSpots) returns (stream prices){}


	rpc AutomateTime(time) returns (command){}


}

message coordinates {

	double longitude = 1;
	double latitude = 2;

}

message chargingSpots {

	string street = 1;
	string area = 2;

}

message prices {

	double price = 1;
}

message time {

	double timeOn = 1;
	double timeOff = 2;
}

message command {

	string command = 1;
}

